# solana-pumpfun-sniper-bot

./: .env.example  .gitignore  Cargo.toml  README.md  mint.json  package.json
src/: allselltoken.ts  closeata.ts  config.rs  data.json  detector.rs  index.ts  instructions.rs  main.rs  sniper.rs  utils.rs  wallet.rs
src/pumputils/src/constants/: constants.ts
src/pumputils/src/src/: bondingCurveAccount.ts  pumpfun.ts  uploadToIpfs.ts  util.ts
src/pumputils/src/utils/: swapOnlyAmm.ts  utils.ts
src/pumputils/utils/: buyToken.ts  getBondingCurveTokenAccountWithRetry.ts  promptUserBuy.ts  sellToken.ts
src/utils/: jito.ts
