[package]
name = "pumpfun-sniper-bot"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A high-performance Solana sniper bot for Pump.fun token launches"
license = "MIT"
repository = "https://github.com/yourusername/pumpfun-sniper-bot"

[[bin]]
name = "pumpfun-sniper"
path = "src/main.rs"

[dependencies]
# Solana SDK
solana-sdk = "1.18"
solana-client = "1.18"
solana-transaction-status = "1.18"
solana-program = "1.18"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# gRPC streaming (Yellowstone Geyser)
yellowstone-grpc = "0.2"
tonic = { version = "0.11", features = ["tls", "tls-roots"] }
prost = "0.12"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Environment variables
dotenvy = "0.15"

# Base58 encoding/decoding
bs58 = "0.5"

# BIP39 mnemonic support
bip39 = "2.0"

# Anchor client for instruction building
anchor-client = "0.30"
anchor-lang = "0.30"

# Base64 encoding
base64 = "0.21"

# Bincode for transaction serialization
bincode = "1.3"

# Time utilities
chrono = "0.4"

# Retry logic
tokio-retry = "0.3"

# Jito bundle support (optional)
jito-protos = "0.1"

# Async utilities
futures = "0.3"

# Stream utilities
tokio-stream = "0.1"

# Random number generation
rand = "0.8"

# SPL Token support
spl-token = "4.0"
spl-associated-token-account = "2.2"

# Additional Solana dependencies
solana-account-decoder = "1.18"
